# databases_gpu

./: README.md
GPU/: tail_link
GPU/cuckoo/: Main.cpp  README.md  api.cpp  api.h  cuckoo.h
GPU/cuckoo_gtest/: Main_back.cpp  cuckoo.cu  cuckoo.h  random_numbers.cpp
GPU/cuckoo_with_lock/: Main.cpp  api.cpp  api.h  cuckoo.cu  cuckoo.h  dy_hash.h
GPU/cuckoo_without_for_loop/: CMakeLists.txt  README.md  cuckoo.cu  dy_hash.h
GPU/dyhash/: Main.cpp  Main_backup_0910.cpp  api.cpp  api.h  cuckoo.cu  cuckoo.h  diff_hash_num_pos_fun.cpp  dy_hash.h  random_numbers.cpp  test.sh  test_uilt.h
GPU/linear/: Main.cpp  api.cpp  api.h  linear_probe.h
GPU/linear_reszie/: CMakeLists.txt  Main.cpp  api.cpp  api.h  linear_probe.cu  linear_probe.h
GPU/mega-Exch/: CMakeLists.txt  Main.cpp  README.md  api.cpp  gpu_hash.h  gputimer.h
GPU/myslab/: Main.cpp
GPU/old_version/cuckoo/: CMakeLists.txt  cuckoo.cu  dy_hash.h
GPU/old_version/cuckoo_gtest/: CMakeLists.txt  Main.cpp  api.cpp  api.h  dy_hash.h  gputimer.h  my_idea_9_6_resize.txt  test.sh
GPU/old_version/cuckoo_with_lock/: Main.cpp  api.cpp
GPU/old_version/cuckoo_without_for_loop/: api.cpp  api.h  cuckoo.cu  cuckoo.h
GPU/old_version/linear/: dy_hash.h  linear_probe.cu
GPU/old_version/mega-Exch/: api.h  dy_hash.h  gpu_hash.cu  libgpuhash.h  test.sh
GPU/old_version/mega_hash/: README.md
GPU/old_version/tail_link/: CMakeLists.txt
GPU/slab/: .gitignore  CMakeLists.txt  Cpu_api.cpp  Cpu_api.h  Main.cpp  gputimer.h  slab_hash.cu  slab_hash.h
GPU/slab/include/: dy_hash.h  test_uilt.h
GPU/tail_link/: hash.cu
GPU/warp/: CMakeLists.txt  Main.cpp  api.cpp  api.h  cuckoo.cu  cuckoo.h
icde/: main.tex  ref.bib
icde/pic/compare/: upsize.eps
icde/pic/group-size/: g1-insert.eps  g1-search.eps  g2-insert.eps  g32-insert.eps  g4-insert.eps  g4-search.eps  g8-insert.eps  g8-search.eps
icde/pic/static/: static_insert.eps  static_search.eps
icde/response/: ref.bib  report.tex  reviewer-1.tex  reviewer-2.tex  reviewer-3.tex
icde/secs/: conclusion.tex  cuckoo.tex  dynamic.tex  experiment.tex  introduction.tex  literature.tex  preliminaries.tex
paper/: main.aux  main.tex  ref.bib
paper/exp/atomic/: atomicExch.txt
paper/fig/: figures.pptx
paper/pic/compare/: downsize.eps  upsize.eps
paper/pic/dynamic-stability/: dynamic-sta-ali.eps  dynamic-sta-random.eps  dynamic-sta-reddit.eps  dynamic-sta-tpch.eps  (+1 more)
paper/secs/: appendix.tex  conclusion.tex  cuckoo.tex  dynamic.tex  experiment.tex  introduction.tex  literature.tex  notation.tex  preliminaries.tex
tkde/: .gitignore  main.tex  ref.bib
tkde-revision/: .gitignore  FinalFile_EditorMessage_YUCLAW-1.docx  TODO.txt  cover-letter-revision.docx  cover-letter.docx  main.tex  ref.bib
tkde-revision/exp/: atomic.p
tkde-revision/fig/: figures.pptx
tkde-revision/response/: .gitignore  ref.bib  report.tex  reviewer-1.tex  reviewer-2.tex  reviewer-3.tex
tkde-revision/secs/: appendix.tex  conclusion.tex  cuckoo.tex  dynamic.tex  experiment.tex  introduction.tex  literature.tex  notation.tex  preliminaries.tex
tkde/fig/: figures.pptx
tkde/secs/: conclusion.tex  cuckoo.tex  dynamic.tex  experiment.tex  introduction.tex  literature.tex  notation.tex  preliminaries.tex
vldb/: main.tex
vldb/secs/: cuckoo.tex  dynamic.tex  introduction.tex
(+208 files in other folders)
